# amsi

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  CTestConfig.cmake  CTestCustom.cmake.in  Doxyfile.in  amsi.cc  amsi.h
amsi_control/: CMakeLists.txt  ControlService.cc  ControlService.h  Migration.cc  Migration.h  amsi.cc  amsi.h
amsi_interface/: CMakeLists.txt  CMakeLists.txt~  ConvenienceFunctions.cc  ConvenienceFunctions.h  Elasticity.cc  Elasticity.h  ElementalSystem.cc  ElementalSystem.h  ErrorEstimators.h  FEA.cc  FEA.h  FollowForceIntegrator.cc  FollowForceIntegrator.h  LAS.h  MatrixUtil.cc  MatrixUtil.h  NeumannIntegrator.cc  NeumannIntegrator.h  NonFiniteElement.cc  NonFiniteElement.h  NonLinElasticIntegrator.cc  NonLinElasticIntegrator.h  NonLinElasticIntegrator.h~  NonLinElasticity.cc  NonLinElasticity.h  NonLinearElasticIntegrator.cc  PetscLAS.cc  PetscLAS.h  SimFEA.cc  SimFEA.h  SimTensorFieldQuery.h  SimmetrixFiles.cmake  Solvers.cc  StressStrainIntegrator.cc  SurfaceTractionIntegrator.cc  TensorFieldQuery.h  TrussIntegrator.h  amsiBCDirichlet.cc  amsiInterface.cc  amsiInterface.h  (+9 more)
amsi_meta/: AddData_LoadBalancing.cc  AddData_LoadBalancing.h  Assemblable.h  CMakeLists.txt  CommPattern.cc  CommPattern.h  CommPattern_Create.cc  CommPattern_Create.h  CommunicationManager.cc  CommunicationManager.h  DataDistribution.cc  DataDistribution.h  PlanMigration.cc  PlanMigration.h  ProcessAllocator.h  ProcessSet.cc  ProcessSet.h  Task.cc  Task.h  TaskGroup.h  TaskManager.cc  TaskManager.h  amsiCoupling.cc  amsiCoupling.h  amsiMeta.cc  amsiMeta.h
amsi_util/: CMakeLists.txt  amsiByteStream.h  amsiConfig.h  amsiConfig.h.in  amsiFileSys.cc  amsiHost.h  amsiMPI.cc  amsiMPI.h  amsiPermute.h  amsiReporter.cc  amsiReporter.h  amsiUtil.cc  amsiUtil.h  amsiUtilConfig.h  amsiUtilConfig.h.in  amsiUtilFunctions.h  unordered_map.h
analysis/: CMakeLists.txt  ConvenienceFunctions.cc  ConvenienceFunctions.h  Elasticity.h  ElementalSystem.cc  ElementalSystem.h  ErrorEstimators.h  LinearElasticIntegrator.cc  MatrixUtil.cc  NonFiniteElement.cc  NonFiniteElement.h  NonLinElasticIntegrator.cc  NonLinElasticIntegrator.h  NonLinElasticity.cc  NonLinElasticity.h  NonLinearElasticIntegrator.cc  NonLinearElasticIntegrator.h  SimFEA.cc  SimFEA.h  SimTensorFieldQuery.h  Solvers.cc  Solvers.h  StressStrainIntegrator.cc  TensorFieldQuery.h  amsiAnalysis.cc  amsiAnalysis.h  amsiAnalysisConfig.h.in  amsiBoundaryConditions.cc  amsiBoundaryConditions.h  amsiConstraint.h  amsiDeformation.cc  amsiDeformation.h  amsiDetectOscillation_impl.h  amsiDummyLAS.h  amsiElasticityFEA.cc  amsiElasticityFEA.h  amsiElementalSystem.h  amsiFEA.cc  amsiFEA.h  amsiFiniteElementAnalysis.cc  (+67 more)
control/: CMakeLists.txt  ControlService.h  Migration.h  amsi.cc  amsi.h  amsi.h.in  amsiControl.cc  amsiControlService.cc  amsiControlService.h  amsiControlService_impl.h
interface/: CMakeLists.txt  ConvenienceFunctions.cc  ConvenienceFunctions.h  Elasticity.cc  Elasticity.h  ElementalSystem.h  ErrorEstimators.h  FEA.cc  FEA.h  FiberOnlyIntegrator.h  FollowForceIntegrator.cc  FollowForceIntegrator.h  FullLULAS.cc  FullLULAS.h  LAS.h  LinearElasticIntegrator.cc  LinearElasticIntegrator.h  NeumannIntegrator.cc  NeumannIntegrator.h  NonFiniteElement.cc  NonFiniteElement.h  NonLinElasticIntegrator.cc  NonLinElasticIntegrator.h  NonLinElasticity.cc  NonLinElasticity.h  NonLinearElasticIntegrator.cc  NonLinearElasticIntegrator.h  PetscLAS.cc  PetscLAS.h  SimFEA.cc  SimFEA.h  SimTensorFieldQuery.h  SimmetrixFiles.cmake  Solvers.cc  Solvers.h  StressStrainIntegrator.h  SurfaceTractionIntegrator.cc  SurfaceTractionIntegrator.h  TensorFieldQuery.h  TrussIntegrator.cc  (+59 more)
meta/: Assemblable.cc  Assemblable.h  CMakeLists.txt  CommunicationManager.cc  CommunicationManager.h  DataDistribution.cc  DataDistribution.h  PlanMigration.cc  PlanMigration.h  ProcessAllocator.h  ProcessSet.cc  ProcessSet.h  Task.cc  Task.h  TaskGroup.cc  TaskManager.cc  TaskManager.h  amsi.cc  amsiAddData.cc  amsiAddData.h  amsiAssemblable.cc  amsiCommunicationManager.cc  amsiCommunicationManager.h  amsiControl.h  amsiControlService.h  amsiCoupling.cc  amsiCoupling.h  amsiCouplingData.h  amsiCreateCoupling.cc  amsiCreateCoupling.h  amsiDataDistribution.cc  amsiDataDistribution.h  amsiFlow.h  amsiMeta.cc  amsiMeta.h  amsiMetaConfig.h  amsiMetaConfig.h.in  amsiPlanMigration.h  amsiProcessAllocator.h  amsiScale.cc  (+6 more)
multiscale/: CMakeLists.txt  Migration.cc  amsiAddData.cc  amsiAddData.h  amsiAssemblable.cc  amsiAssemblable.h  amsiCommunicationManager.cc  amsiCommunicationManager.h  amsiControlService.cc  amsiControlService.h  amsiControlService_impl.h  amsiCoupling.cc  amsiCoupling.h  amsiCreateCoupling.h  amsiDataDistribution.cc  amsiDataDistribution.h  amsiMigration.cc  amsiMultiscale.cc  amsiMultiscale.h  amsiPlanMigration.cc  amsiPlanMigration.h  amsiProcessAllocator.h  amsiProcessSet.cc  amsiProcessSet.h  amsiScale.cc  amsiScale.h  amsiTask.cc  amsiTask.h  amsiTaskManager.cc  amsiTaskManager.h
test/: CMakeLists.txt  test.h
test/analysis/: CMakeLists.txt
test/control/: CMakeLists.txt
test/interface/: CMakeLists.txt
test/meta/: CMakeLists.txt
test/multiscale/: CMakeLists.txt
test/multiscale_analysis/: CMakeLists.txt  init.cc  test2.cc
test/test_control/: CMakeLists.txt
test/test_interface/: CMakeLists.txt
test/test_meta/: CMakeLists.txt
test/test_util/: CMakeLists.txt
util/: CMakeLists.txt  amsiByteStream.h  amsiCasters.h  amsiConfigurationOptions.cc  amsiConfigurationOptions.h  amsiConversionIterator.h  amsiDistributed.h  amsiEnumOps.h  amsiExceptions.h  amsiFail.h  amsiFileSys.cc  amsiFileSys.h  amsiHost.cc  amsiHost.h  amsiHost_impl.h  amsiLocality.cc  amsiLocality.h  amsiMPI.cc  amsiMPI.h  amsiObserver.h  amsiOperators.h  amsiOutput.cc  amsiOutput.h  amsiPArray.cc  amsiPArray.h  amsiPermute.cc  amsiRankSet.cc  amsiRankSet.h  amsiRankSet_impl.h  amsiReporter.cc  amsiReporter.h  amsiString.cc  amsiString.h  amsiTee.h  amsiUUID.cc  amsiUUID.h  amsiUtil.cc  amsiUtil.h  amsiUtilConfig.h  amsiUtilConfig.h.in  (+3 more)
(+231 files in other folders)
